# adb-fps-monitor

./: .gitignore  README.md  adb_fps_monitor.py  device_diagnostic.py  fps_debug.py  pyproject.toml  requirements.txt  temp_map.json.example
companion-app/: .gitignore  ADBMonitorCompanion-v1.1.apk  README.md  local.properties  settings.gradle
companion-app/app/: build.gradle
companion-app/app/src/main/: AndroidManifest.xml
companion-app/app/src/main/java/com/adbmonitor/companion/: MainActivity.java  MonitorService.java
companion-app/app/src/main/java/com/adbmonitor/companion/monitor/: MemoryMonitor.java  NetworkMonitor.java  PowerMonitor.java
companion-app/app/src/main/java/com/adbmonitor/companion/server/: MonitorHttpServer.java  NanoHTTPD.java
companion-app/app/src/main/res/layout/: activity_main.xml
companion-app/app/src/main/res/values/: strings.xml  themes.xml
core/: __init__.py  adb.py  app_reader.py  fps_sources.py  sensors.py
docs/: DEVELOPMENT.md
gui/: __init__.py  main_window.py  recorder.py  widgets.py  worker.py
gui/help/: charts.html  cli.html  faq.html  metrics.html  quick_start.html  recording.html  sensors.html  settings.html
tests/: test_fps_sources.py
